[gd_scene load_steps=3 format=3 uid="uid://c1qp3clg4qov"]

[ext_resource type="Script" path="res://scenes/play_screen/step_4.gd" id="1_e5fsr"]
[ext_resource type="PackedScene" uid="uid://basr5mxkjqjlv" path="res://models/card/visual_card.tscn" id="2_ohkog"]

[node name="Step4" type="BoxContainer"]
script = ExtResource("1_e5fsr")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "接待客人"
horizontal_alignment = 1

[node name="VisualCard" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_ohkog")]
unique_name_in_owner = true
layout_mode = 2
selectable = false

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "需求"
horizontal_alignment = 1

[node name="NeedContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "事件"

[node name="EventContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SubmitButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "制作美食"

[node name="DiscardButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "弃牌"

[connection signal="hidden" from="." to="." method="_on_hidden"]
